fix  backface-visibility problem

--- a/style.scss
+++ b/style.scss
@@ -65,7 +65,8 @@ section {
   width: 100px;
   position: absolute;
   border-radius: 10%;
-  // backface-visibility: hidden;
+  backface-visibility: hidden;
+  z-index: -1;
   transform: rotateY(-180deg);
  
 }
